--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@
     background-color: white;
     border-radius: 5px;
     border: 1px solid rgb(97, 32, 158);
-    color: black;
+    color: red;
     font-size: 1.2rem;
     outline: none;
     padding: 10px 15px;
